--- a/index.html
+++ b/index.html
@@ -176,13 +176,13 @@
                         </div>
                         <!-- Gallery Item -->
                         <div class="col-lg-4 col-md-6 item-img brand">
-                            <img src="css/images/GifTastic.jpg" alt="Image" />
+                            <img src="css/images/friendFinder01.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Branding</h5>
+                                    <h5>Friend Finder</h5>
                                     <div class="icons">
                                         <span class="icon">
-                                            <a href="https://ryan9087.github.io/GifTastic/">
+                                            <a href="https://blooming-harbor-49092.herokuapp.com/">
                                                 <span class="icon-attachment"></span>
                                             </a>
                                         </span>
