--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                             <img src="css/images/TriviaGame.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Web Design</h5>
+                                    <h5>Black Sabbath Trivia Game</h5>
                                     <div class="icons">
                                         <span class="icon">
                                             <a href="https://ryan9087.github.io/TriviaGame/">
@@ -221,7 +221,7 @@
                             <img src="css/images/PsychicGame.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Photography</h5>
+                                    <h5>Psychic Game</h5>
                                     <div class="icons">
                                         <span class="icon">
                                             <a href="https://ryan9087.github.io/Psychic-Game/">
@@ -242,7 +242,7 @@
                             <img src="css/images/FRIDGEfit.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Graphic Design</h5>
+                                    <h5>Fridgefit</h5>
                                     <div class="icons">
                                         <span class="icon">
                                             <a href="https://ryan9087.github.io/1stproject-master-Ryan/">
@@ -263,7 +263,7 @@
                             <img src="css/images/GuitarCollector.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Web Design</h5>
+                                    <h5>Guitar Collector</h5>
                                     <div class="icons">
                                         <span class="icon">
                                             <a href="https://ryan9087.github.io/week-4-game/">
