--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/GifTastic.jpg" title="Project Name">
+                                            <a href="css/images/friendFinder01.jpg" title="Project Name">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
