--- a/index.html
+++ b/index.html
@@ -218,18 +218,18 @@
                         </div>
                         <!-- Gallery Item -->
                         <div class="col-lg-4 col-md-6 item-img photo">
-                            <img src="css/images/PsychicGame.jpg" alt="Image" />
+                            <img src="css/images/burger.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Psychic Game</h5>
+                                    <h5>Eat Da Burger</h5>
                                     <div class="icons">
                                         <span class="icon">
-                                            <a href="https://ryan9087.github.io/Psychic-Game/">
+                                            <a href="https://sheltered-journey-14066.herokuapp.com/">
                                                 <span class="icon-attachment"></span>
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/PsychicGame.jpg" title="Project Name">
+                                            <a href="css/images/burger.jpg" title="Project Name">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
