--- a/index.html
+++ b/index.html
@@ -197,18 +197,18 @@
                         </div>
                         <!-- Gallery Item -->
                         <div class="col-lg-4 col-md-6 item-img web">
-                            <img src="css/images/connectedGamer.jpg" alt="Image" />
+                            <img src="css/images/MongoScraper.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
                                     <h5>Connected Gamer</h5>
                                     <div class="icons">
                                         <span class="icon">
-                                            <a href="https://github.com/tracerendell/Project-2-LFG_Site_new">
+                                            <a href="https://fit-to-scrape-001.herokuapp.com/">
                                                 <span class="icon-attachment"></span>
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/connectedGamer.jpg" title="Project Name">
+                                            <a href="css/images/MongoScraper.jpg" title="Mongo Scraper">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
