--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                             <img src="css/images/TrainSchedule.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Train Schedule</h5>
+                                    <h5>Train Scheduler</h5>
                                     <div class="icons">
                                         <span class="icon">
                                             <a href="https://ryan9087.github.io/Train-Scheduler/">
@@ -187,7 +187,7 @@
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/friendFinder01.jpg" title="Project Name">
+                                            <a href="css/images/friendFinder01.jpg" title="Friend Finder">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
@@ -197,18 +197,18 @@
                         </div>
                         <!-- Gallery Item -->
                         <div class="col-lg-4 col-md-6 item-img web">
-                            <img src="css/images/MongoScraper.jpg" alt="Image" />
+                            <img src="css/images/clickyGame.jpg" alt="Image" />
                             <div class="item-img-overlay">
                                 <div class="overlay-info v-middle">
-                                    <h5>Connected Gamer</h5>
+                                    <h5>Click Game</h5>
                                     <div class="icons">
                                         <span class="icon">
-                                            <a href="https://fit-to-scrape-001.herokuapp.com/">
+                                            <a href="https://clicky-game-0001.herokuapp.com/">
                                                 <span class="icon-attachment"></span>
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/MongoScraper.jpg" title="Mongo Scraper">
+                                            <a href="css/images/clickyGame.jpg" title="Clicky Game">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
@@ -229,7 +229,7 @@
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/burger102.jpg" title="Project Name">
+                                            <a href="css/images/burger102.jpg" title="Eat Da Burger">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
@@ -250,7 +250,7 @@
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/FRIDGEfit.jpg" title="Project Name">
+                                            <a href="css/images/FRIDGEfit.jpg" title="Fridgefit">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
@@ -271,7 +271,7 @@
                                             </a>
                                         </span>
                                         <span class="icon link">
-                                            <a href="css/images/GuitarCollector.jpg" title="Project Name">
+                                            <a href="css/images/GuitarCollector.jpg" title="Gutiar Collector">
                                                 <span class="icon-magnifying-glass"></span>
                                             </a>
                                         </span>
